simple chat on sockets.io

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,6 @@
 <% include header %>
 <p>Всего записей <%= total %></p>
+<p>Записи нагло пизджатся из оперативки при помощи memcahced</p>
 <ul>
 
     <% items.forEach(function(item) { %>
