--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -5,6 +5,7 @@
 </div>
 <script src="/js/jquery.js"></script>
 <script src="/js/bootstrap.min.js"></script>
+<script src="/socket.io/socket.io.js"></script>
 <script src="/js/script.js"></script>
 </body>
 </html>
