--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -1,12 +1,12 @@
 <% include header %>
-<h1>Действительно приватный чат</h1>
+<h1>Действительно приватный чат v 0.1</h1>
 <br/>
 
 <div class="row">
     <div class="span2">
         <h3>Пока в сессию и куки ничего не пишется, поэтому при обновлении страницы придется логиниться опять</h3>
-        <h3>Люди в этом чате</h3>
-        <ul id="people" class="unstyled">
+        <h3 class="people" style="display: none">Люди в этом чате</h3>
+        <ul id="people" class="unstyled people" style="display: none">
             <li>Пока никого нету</li>
         </ul>
     </div>
