--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -8,7 +8,7 @@
 </p>
 <% } %>
 <div class="row col-lg-2 col-sm-2 col-xs-2">
-    <form class="form" id="auth_form" action="/auth/" method="post">
+    <form class="form custom_form" id="auth_form" action="/auth/" method="post">
         <div class="form-group">
             <label for="exampleInputEmail1">Логин</label>
             <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Логин" name="username" autocomplete="off">
