--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -6,6 +6,7 @@
 <script src="/js/jquery.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
+<script type="text/javascript" src="/js/mindmup-editabletable.js"></script>
 <script src="/js/script.js"></script>
 </body>
 </html>
