--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -25,8 +25,8 @@
             <td class="non-editable"><%= item.id %></td>
             <td data-column-name="title"><%= item.title %></td>
             <td data-column-name="post"><%= item.html %></td>
-            <td data-column-name="created_at"><%= item.created_at %></td>
-            <td data-column-name="updated_at"><%= item.updated_at %></td>
+            <td class="non-editable"><%= item.created_at %></td>
+            <td class="non-editable"><%= item.updated_at %></td>
             <td class="non-editable delete"><span href="#" class="glyphicon glyphicon-remove"></span></td>
         </tr>
         <% }); %>
@@ -60,8 +60,72 @@
             <td data-column-name="username"><%= item.username %></td>
             <td class="non-editable"><%= item.password %></td>
             <td data-column-name="is_admin"><%= item.is_admin %></td>
-            <td data-column-name="created_at"><%= item.created_at %></td>
-            <td data-column-name="updated_at"><%= item.updated_at %></td>
+            <td class="non-editable"><%= item.created_at %></td>
+            <td class="non-editable"><%= item.updated_at %></td>
+            <td class="non-editable delete"><span href="#" class="glyphicon glyphicon-remove"></span></td>
+        </tr>
+        <% }); %>
+        </tbody>
+    </table>
+</div>
+<% } %>
+<h3>Группы</h3>
+<div>
+    <a href="#" class="add-item" data-table="addgroup">Добавить</a> <span class="glyphicon glyphicon-plus"></span>
+</div>
+<br/>
+<% if(locals.groups.length) { %>
+<div class="table-responsive">
+    <table class="table table-bordered table-hover posts-table">
+        <thead>
+        <tr>
+            <th>id</th>
+            <th>title</th>
+            <th>created_at</th>
+            <th>updated_at</th>
+            <th></th>
+        </tr>
+        </thead>
+        <tbody>
+        <% groups.forEach(function(item) { %>
+        <tr data-id="<%= item.id %>" data-url="/groups/">
+            <td class="non-editable"><%= item.id %></td>
+            <td data-column-name="title"><%= item.title %></td>
+            <td class="non-editable"><%= item.created_at %></td>
+            <td class="non-editable"><%= item.updated_at %></td>
+            <td class="non-editable delete"><span href="#" class="glyphicon glyphicon-remove"></span></td>
+        </tr>
+        <% }); %>
+        </tbody>
+    </table>
+</div>
+<% } %>
+<h3>Группы пользователей</h3>
+<div>
+    <a href="#" class="add-item" data-table="adduseringroup">Добавить</a> <span class="glyphicon glyphicon-plus"></span>
+</div>
+<br/>
+<% if(locals.usersingroup.length) { %>
+<div class="table-responsive">
+    <table class="table table-bordered table-hover posts-table">
+        <thead>
+        <tr>
+            <th>id</th>
+            <th>user_id</th>
+            <th>group_id</th>
+            <th>created_at</th>
+            <th>updated_at</th>
+            <th></th>
+        </tr>
+        </thead>
+        <tbody>
+        <% usersingroup.forEach(function(item) { %>
+        <tr data-id="<%= item.id %>" data-url="/usersingroup/">
+            <td class="non-editable"><%= item.id %></td>
+            <td data-column-name="user_id"><%= item.user_id %></td>
+            <td data-column-name="group_id"><%= item.group_id %></td>
+            <td class="non-editable"><%= item.created_at %></td>
+            <td class="non-editable"><%= item.updated_at %></td>
             <td class="non-editable delete"><span href="#" class="glyphicon glyphicon-remove"></span></td>
         </tr>
         <% }); %>
